--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>チーズアカデミー</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script type="text/javascript">
       $(function(){
@@ -24,6 +25,11 @@
         });
       });
     </script>
+  $('.lang-select').click(function() {
+  var lang = $(this).attr('data-lang');
+  window.location = $(this).attr('href');
+  location.reload();
+});
 </head>
 <!-- 最初の設定は終わっています　必要な方は触ってください -->
 
@@ -46,7 +52,13 @@
       </div>
     </div>
   </header>
-
+<div class="text-center mb-3">
+  <a href="#googtrans(ja|en)" class="lang-select" data-lang="en"><img src="https://www.solodev.com/assets/google-translate/flag-usa.png" alt="USA"></a> 
+  <a href="#googtrans(ja|zh-CN)" class="lang-select" data-lang="zh-CN"><img src="https://www.solodev.com/assets/google-translate/flag-china.png" alt="China"></a> 
+  <a href="#googtrans(ja|es)" class="lang-select" data-lang="es"><img src="https://www.solodev.com/assets/google-translate/flag-mexico.png" alt="MEXICO"></a>
+  <a href="#googtrans(ja|fr)" class="lang-select" data-lang="fr"><img src="https://www.solodev.com/assets/google-translate/flag-france.png" alt="France"></a>
+  <a href="#googtrans(ja|ja)" class="lang-select" data-lang="ja"><img src="https://www.solodev.com/assets/google-translate/flag-japan.png" alt="JAPAN"></a>
+</div>
   <div class="main_visual">
     <div class="container">
       <h1>セカイを変えるチーズを作ろう</h1>
