--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
   window.location = $(this).attr('href');
   location.reload();
 });
+    function googleTranslateElementInit() {
+  new google.translate.TranslateElement({
+    pageLanguage: 'ja', 
+    layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT
+  }, 'google_translate_element');
+}
     </script>
 
 </head>
