--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
   </div>
 
 <div class="text-center mb-3">
-  <a href="#googtrans(ja|en)" class="lang-select" data-lang="en"><img src="https://www.solodev.com/assets/google-translate/flag-usa.png" alt="USA"></a> 
-  <a href="#googtrans(ja|zh-CN)" class="lang-select" data-lang="zh-CN"><img src="https://www.solodev.com/assets/google-translate/flag-china.png" alt="China"></a> 
-  <a href="#googtrans(ja|es)" class="lang-select" data-lang="es"><img src="https://www.solodev.com/assets/google-translate/flag-mexico.png" alt="MEXICO"></a>
-  <a href="#googtrans(ja|fr)" class="lang-select" data-lang="fr"><img src="https://www.solodev.com/assets/google-translate/flag-france.png" alt="France"></a>
-  <a href="#googtrans(ja|ja)" class="lang-select" data-lang="ja"><img src="https://www.solodev.com/assets/google-translate/flag-japan.png" alt="JAPAN"></a>
+  <a href="#googtrans(ja|en)" class="lang-select" data-lang="en"><img src="img/usa.png" alt="USA"></a> 
+  <a href="#googtrans(ja|zh-CN)" class="lang-select" data-lang="zh-CN"><img src="img/china.png" alt="China"></a> 
+  <a href="#googtrans(ja|es)" class="lang-select" data-lang="es"><img src="img/mexico.png" alt="MEXICO"></a>
+  <a href="#googtrans(ja|fr)" class="lang-select" data-lang="fr"><img src="img/france.png" alt="France"></a>
+  <a href="#googtrans(ja|ja)" class="lang-select" data-lang="ja"><img src="img/japan.png" alt="JAPAN"></a>
 </div>
   <div class="contents">
     <div class="about" id="about">
