--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       $('.lang-select').click(function() {
   var lang = $(this).attr('data-lang');
   window.location = $(this).attr('href');
-  location.reload();
+  window.location.reload();
 });
     function googleTranslateElementInit() {
   new google.translate.TranslateElement({
